--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,21 +1,22 @@
+auxiliary.org-netbeans-modules-php-phpunit.bootstrap_2e_create_2e_tests=false
+auxiliary.org-netbeans-modules-php-phpunit.bootstrap_2e_path=
+auxiliary.org-netbeans-modules-php-phpunit.configuration_2e_path=
+auxiliary.org-netbeans-modules-php-phpunit.customSuite_2e_path=
+auxiliary.org-netbeans-modules-php-phpunit.test_2e_groups_2e_ask=false
+auxiliary.org-netbeans-modules-php-phpunit.test_2e_run_2e_all=false
 file.reference.app-build=app/build
 file.reference.app-vendor=app/vendor
 file.reference.top-libs=libs
 file.reference.top-nbproject=nbproject
 ignore.path=\
-    ${file.reference.top-libs}:\
     ${file.reference.app-build}:\
-    ${file.reference.app-vendor}
+    ${file.reference.app-vendor}:\
+    ${file.reference.top-libs}
 include.path=\
-    ${file.reference.top-nbproject}:\
-    ${file.reference.app-vendor}
+    ${file.reference.app-vendor}:\
+    ${file.reference.top-libs}:\
+    ${file.reference.top-nbproject}
 php.version=PHP_53
-phpunit.bootstrap=
-phpunit.bootstrap.create.tests=false
-phpunit.configuration=
-phpunit.run.test.files=false
-phpunit.suite=
-phpunit.test.groups.ask=false
 source.encoding=UTF-8
 src.dir=.
 tags.asp=false
